--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <link rel="stylesheet" href="./src/output.css">
-    <link rel="icon" type="icon" href="./assets/photos/Harwil-logo.png">
-    <script src="./components/fixedNavbar.js"></script>
-    <script src="./components/carousel.js"></script>
+    <link rel="stylesheet" href="output.css">
+    <link rel="icon" type="icon" href="Harwil-logo.png">
+    <script src="fixedNavbar.js"></script>
+    <script src="carousel.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,7 +44,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
             </svg>
           </button>
-          <img src="assets/photos/Harwil-logo.png" class=" py-4 pl-5 pt-4 cursor-pointer" onclick="window.location.reload()">
+          <img src="Harwil-logo.png" class=" py-4 pl-5 pt-4 cursor-pointer" onclick="window.location.reload()">
           <ul class="space-y-1 space-x-1 p-4 py-6 md:w-full max-md:top-5 max-md:text-3xl" id="mobile-menu">
             <li><a href="#About" class="block py-2 px-4 rounded hover:bg-gray-700">O nás</a></li>
             <li><a href="#Services" class="block py-2 px-4 rounded hover:bg-gray-700">Služby</a></li>
@@ -76,7 +76,7 @@
             </svg>
           </button>
         </div>
-        <img src="./assets/photos/harwil_230x230.jpg" class=" w-24 relative justify-center left-10 overflow-hidden max-md:left-0 cursor-pointer" onclick="window.location.reload()">
+        <img src="harwil_230x230.jpg" class=" w-24 relative justify-center left-10 overflow-hidden max-md:left-0 cursor-pointer" onclick="window.location.reload()">
         <!--<h1 class=" text-6xl top-9 justify-center left-1/4 pl-60 absolute max-md:left-38 max-md:pl-7 max-md:text-5xl -z-50">HARWIL</h1>-->
         <div class="hidden lg:flex lg:gap-x-12 absolute top-10 left-96 pl-32 text-7xl">
           <a href="#About" class="text-sm/6 font-semibold text-gray-900 hover:text-green-500">O nás</a>
@@ -188,7 +188,7 @@
                 <div class="flex transition-transform duration-700" id="carousel">
                   <!-- Slide 1 -->
                   <div class="min-w-full text-white flex items-center justify-center">
-                    <img src="./assets/photos/background-1920x1080.jpg">
+                    <img src="background-1920x1080.jpg">
                     <div class="absolute left-0 pl-14 pt-64 top-1/4 ">
                       <h2 class="text-6xl font-header">Výhodný prenájom</h2>
                       <p class="w-96 justify-center text-center pt-10 text-xl font-text">
@@ -198,12 +198,12 @@
                   </div>
                   <!-- Slide 2 -->
                   <div class="min-w-full text-white flex items-center justify-center">
-                    <img src="./assets/photos/background-1920x1080.jpg">
+                    <img src="background-1920x1080.jpg">
                     <div class="absolute pl-14 pt-64 top-1/4 font-header">Spoľahlivá logistika</div>
                   </div>
                   <!-- Slide 3 -->
                   <div class="min-w-full text-white flex items-center justify-center">
-                    <img src="./assets/photos/87452078_110440163903426_244634040030724096_n.jpg">
+                    <img src="87452078_110440163903426_244634040030724096_n.jpg">
                   </div>
                 </div>
               
@@ -222,26 +222,26 @@
           <h2 class="text-center text-2xl font-semibold text-gray-900 pb-32 font-header">Partner</h2>
           <div class="mx-auto mt-4 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5">
             <a href="https://www.nicknack.cz">
-              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1 absolute left-0" src="./assets/photos/nicknack_logo.svg" alt="Nicknack" width="158" height="48">
+              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1 absolute left-0" src="nicknack_logo.svg" alt="Nicknack" width="158" height="48">
             </a>
           </div>
         </div>
         <h2 class="text-center text-2xl font-semibold text-gray-900 mt-10 font-header">Náš servis vyskúšali aj</h2>
           <div class="mx-auto mt-10 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5">
             <a href="https://zilina.sk">
-              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="./assets/photos/logo-alt.svg" alt="Transistor" width="158" height="48">
+              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="logo-alt.svg" alt="Transistor" width="158" height="48">
             </a>
             <a href="https://eshop.pivovarsvijany.cz/?utm_source=google&utm_medium=cpc&gad_source=1&gclid=Cj0KCQiA0--6BhCBARIsADYqyL_uBmz6lOEGHpuYXXnE2_3w_L5r3JFnCy56iqtNuQ6cFNi_RdM2T88aApDoEALw_wcB">
-              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="./assets/photos/svijany-logo-2.webp" alt="Reform" width="158" height="48">
+              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="svijany-logo-2.webp" alt="Reform" width="158" height="48">
             </a>
             <a href="https://www.rajec.sk">
-              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="./assets/photos/logo-rajec.png" alt="Tuple" width="158" height="48">
+              <img class="col-span-2 max-h-12 w-full object-contain lg:col-span-1" src="logo-rajec.png" alt="Tuple" width="158" height="48">
             </a>
             <a href="https://www.saris.sk">
-              <img class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1" src="./assets/photos/logo-saris.svg" alt="SavvyCal" width="158" height="48">
+              <img class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1" src="logo-saris.svg" alt="SavvyCal" width="158" height="48">
             </a>
             <a href="https://www.nove-mesto.sk">
-              <img class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1" src="./assets/photos/logo-nm.png" alt="Statamic" width="158" height="48">
+              <img class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1" src="logo-nm.png" alt="Statamic" width="158" height="48">
             </a>
           </div>
       </div>
