--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="fixedNavbar.js"></script>
     <script src="carousel.js"></script>
 
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed:ital,wght@0,350;1,350&display=swap" rel="stylesheet">
